# Tectonic-Engine-2

./: .gitignore  3rdpartylicenses.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  FAQ.md  LICENSE  README.md  SECURITY.md  build_windows_arm64.bat  cmakegen_freebsd_x64.bat  cmakegen_freebsd_x64.sh  cmakegen_linux_x64.sh  cmakegen_windows_x64.bat  cmakegen_windows_x86.bat  cmakegen_x64.bat  cmakegen_x64.sh  cmakegen_x86.bat  credits.txt
.github/workflows/: ci.yml
Game_Template/: binds.txt  config.txt  cvars.txt  gamedef.txt  localization.txt  materials.def  particles.def  tectonic.fgd  water.def
Game_Template/cubemaps/experiment/: cubemap_0.txt
Game_Template/maps/: experiment.bsp  techdemo.bsp  test.bsp
Game_Template/models/: error.glb
Game_Template/models/props_interiors/: sinkkitchen01a.glb
Game_Template/models/tectonic/: Barrel_01.glb  Barrel_02.glb  Television_01.glb  wooden_table_02.glb
Game_Template/shaders/: beam.frag  beam.vert  bloom_downsample.frag  bloom_upsample.frag  blur.frag  cable.frag  cable.vert  cas.comp  cas_blit.frag  common.glsl  decal.frag  decal.vert  depth.vert  gbuffer.frag  gbuffer.vert  gbuffer_debug.frag  glass.frag  glass.vert  interior_parallax.frag  interior_parallax.vert  lightmap.glsl  lightmap.h  lights.glsl  lights.h  lum_average.comp  lum_histogram.comp  monitor.frag  monitor.vert  motion_blur.frag  overlay.frag  overlay.vert  parallax.glsl  parallax.h  particle.frag  particle.geom  particle.vert  pbr.glsl  postprocess.frag  resolve.frag  shadow_cascade.geom  (+23 more)
Game_Template/textures/: dev_measuregeneric01.dds  dev_measuregeneric01b.dds  fire_01.dds  water_dudv.dds  water_normal.dds
Game_Template/textures/Barrel_01/: Barrel_01_diffuse.dds  Barrel_01_normal.dds
Game_Template/textures/Barrel_02/: Barrel_02_diffuse.dds  Barrel_02_normal.dds
Game_Template/textures/GreenChair_01/: GreenChair_01_diffuse.dds  GreenChair_01_normal.dds
Game_Template/textures/Television_01/: Television_01_diffuse.dds  Television_01_normal.dds
Game_Template/textures/tectonic_world/: brick_4_diffuse.dds  brick_4_normal.dds
Game_Template/textures/wooden_table_02/: wooden_table_02_diffuse.dds  wooden_table_02_normal.dds
launcher/: launcher.cpp
libs/DiscordRPC/lib/x64arm/: discord-rpc.lib
libs/GLM/lib/x64/: glm.lib
libs/VTFLib/include/: HLLib.h  VTFLib.h
libs/VTFLib/lib/x64/: VTFLib.lib
libs/bullet/include/LinearMath/: btScalar.h
libs/bullet/lib/x64/: Bullet3Dynamics.lib  BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
libs/bullet/lib/x64arm/: Bullet3Dynamics.lib  BulletDynamics.lib  LinearMath.lib
libs/bullet/lib/x86/: Bullet3Dynamics.lib  BulletCollision.lib  BulletDynamics.lib  LinearMath.lib
libs/fltk-1.4.4/lib/x64/: fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
libs/fltk-1.4.4/lib/x86/: fltk.lib  fltk_forms.lib  fltk_gl.lib  fltk_images.lib  fltk_jpeg.lib  fltk_png.lib  fltk_z.lib
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/minimp3/include/: minimp3.h
libs/minispec/include/: minispec.h
libs/openal-soft-1.24.3/lib/x64sarm/: OpenAL32.lib
libs/sentry/lib/linux/: crashpad_handler
libs/sentry/lib/x64/: sentry.lib
libs/sentry/lib/x64arm/: sentry.lib
libs/sentry/lib/x86/: sentry.lib
src/: beams.cpp  beams.h  binds.cpp  binds.h  bsploader.cpp  bsploader.h  build_date.cpp  camera.h  cascade.cpp  cascade.h  concmd.cpp  concmd.h  console.cpp  console.h  cubemap.cpp  cubemap.h  cvar.cpp  cvar.h  discord.cpp  dynamic_light.h  dynamic_sky.h  engine_api.h  entities.cpp  entities.h  entities_game.cpp  filesystem.cpp  filesystem.h  gamedef.cpp  gamedef.h  input.cpp  input.h  lightstyles.cpp  localization.cpp  localization.h  main.cpp  main_menu.cpp  main_menu.h  map_system.cpp  map_system.h  maps.cpp  (+71 more)
src/engine/: ambient_zone.cpp  ambient_zone.h  animation.cpp  animation.h  binds.cpp  bsploader.cpp  bsploader.h  build_date.h  cables.cpp  cables.h  camera.h  camera_shake.cpp  camera_shake.h  cmdargs.cpp  cmdargs.h  concmd.h  console.cpp  console.h  cubemap.cpp  cubemap.h  cvar.cpp  cvar.h  dds.cpp  dds.h  decals.cpp  decals.h  discord.cpp  discord.h  dsp.cpp  dsp.h  dynamic_light.cpp  dynamic_light.h  dynamic_sky.cpp  engine_api.h  entities.cpp  entities.h  fade.cpp  fade.h  filesystem.cpp  filesystem.h  (+114 more)
src/game/: dynamic_sky.cpp  env_beam.cpp  env_cable.cpp  env_cubemap_box.cpp  env_dynamic_sky.cpp  env_fade.cpp  env_particle_system.cpp  env_postprocess_controller.cpp  env_screenoverlay.cpp  env_shake.cpp  env_sound.cpp  env_sprite.cpp  env_zoom.cpp  func_breakable.cpp  func_brush.cpp  func_button.cpp  func_clip.cpp  func_conveyor.cpp  func_door.cpp  func_door_rotating.cpp  func_friction.cpp  func_glass.cpp  func_illusionary.cpp  func_interior_parallax.cpp  func_interior_parallax.h  func_ladder.cpp  func_monitor.cpp  func_monitor.h  func_movelinear.cpp  func_pendulum.cpp  func_plat.cpp  func_precipitation.cpp  func_rotating.cpp  func_video.cpp  func_video.h  func_video_display.cpp  game_end.cpp  game_text.cpp  info_decal.cpp  info_monitorcamera.cpp  (+41 more)
src/launcher/: launcher.cpp
src/launcher/resources/: launcher.aps  launcher.manifest  launcher.rc
src/shaders/: beam.frag  beam.vert  bloom_downsample.comp  bloom_upsample.comp  cable.frag  cable.vert  cas.comp  common.sh  decal.frag  decal.vert  ffx_a.h  gbuffer.frag  gbuffer.vert  gbuffer_debug.frag  glass.frag  glass.vert  interior_parallax.frag  interior_parallax.vert  lightmap.sh  lights.sh  lum_average.comp  lum_clear.comp  lum_histogram.comp  monitor.frag  monitor.vert  motion_blur.comp  overlay.frag  parallax.sh  particle.frag  particle.vert  pbr.sh  postprocess.frag  postprocess.vert  resolve.frag  shadow_cascade.frag  shadow_cascade.vert  shadow_point.frag  shadow_point.vert  shadow_spot.frag  shadow_spot.vert  (+16 more)
src/tools/importer/: main.cpp
tools/tconsole/: main.cpp
